--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,26 @@
-flask
-gevent
-gunicorn
+amqp==2.2.2
+aniso8601==3.0.0
+billiard==3.5.0.3
+celery==4.1.0
+click==6.7
+Flask==0.12.2
+flask-marshmallow==0.8.0
+Flask-RESTful==0.3.6
+Flask-SQLAlchemy==2.3.2
+gevent==1.2.2
+greenlet==0.4.13
+gunicorn==19.7.1
+itsdangerous==0.24
+Jinja2==2.10
+kombu==4.1.0
+MarkupSafe==1.0
+marshmallow==2.15.0
+marshmallow-sqlalchemy==0.13.2
+psycopg2==2.7.4
+python-chess==0.23.0
+pytz==2018.3
+redis==2.10.6
+six==1.11.0
+SQLAlchemy==1.2.6
+vine==1.1.4
+Werkzeug==0.14.1
